Support invocation on JDK9.
We just hope that endorsed libs are no longer needed, and put everything on the standard classpath.
Module java.activation is also needed for parser to work.